mocha.css
/* ... */
.white-theme,
html[data-theme="light"] {
  --red: #e75154;
  --orange: #ffa542;
  --green: #2a9d8f;
  --golden: 255, 202, 86; /*rgb(255, 202, 86)*/
  --blue: #5397d3;
  --white: #ffffff;

  --main-content-bg: var(--white);

  --ls-primary-background-color: #f5f5f5;
  --ls-secondary-background-color: var(--ls-primary-background-color);
  --ls-tertiary-background-color: #eef3f7;
  --ls-quaternary-background-color: #eeeeee;

  --ls-table-tr-even-background-color: 245, 245, 245; /*rgb(245, 245, 245)*/
  --ls-table-tr-odd-background-color: 255, 255, 255; /*rgb(255, 255, 255)*/

  --ls-active-primary-color: var(--blue);
  --ls-active-secondary-color: var(--blue);

  --ls-block-properties-background-color: #f4f4f4;
  --ls-page-properties-background-color: #f4f4f4;

  --ls-search-background-color: var(--ls-primary-background-color);
  --ls-border-color: rgba(232, 229, 229);
  --ls-secondary-border-color: rgb(226, 231, 236);
  --ls-guideline-color: var(--ls-border-color);
  --ls-menu-hover-color: var(--ls-a-chosen-bg);
  --ls-primary-text-color: #383232;
  --ls-secondary-text-color: #383232;
  --ls-title-text-color: var(--ls-primary-text-color);

  --ls-link-text-color: #246eb4;
  --ls-link-text-hover-color: #2466a6;
  --ls-link-ref-text-color: #246eb4;
  --ls-link-ref-text-hover-color: #2466a6;

  --ls-tag-text-color: #3f3f3f;
  --ls-tag-text-hover-color: #2b4451;

  --ls-slide-background-color: var(--white);

  --ls-block-bullet-border-color: #dedede;
  --ls-block-bullet-color: #433f3840;
  --ls-block-highlight-color: #c0e6fd;

  --ls-selection-background-color: #557bed;

  --ls-page-checkbox-color: var(--blue);
  --ls-page-checkbox-border-color: var(--blue);

  --ls-page-inline-code-color: 2, 144, 158; /* rgb(2, 144, 158) */
  --ls-page-inline-code-bg-color: #f7f7f7;

  --ls-scrollbar-foreground-color: rgb(125, 125, 125, 0.2);
  --ls-scrollbar-background-color: var(--transparent);
  --ls-scrollbar-thumb-hover-color: rgba(0, 0, 0, 0.2);

  --ls-head-text-color: var(--ls-primary-text-color);

  --ls-icon-color: #908e8b;
  --ls-search-icon-color: var(--ls-icon-color);
  --ls-a-chosen-bg: #edece8;

  --color-level-1: hsl(0, 5%, 98%);
  --color-level-2: hsl(0, 5%, 97%);
  --color-level-3: hsl(0, 5%, 96%);
  --color-level-4: hsl(0, 5%, 95%);
  --color-level-5: hsl(0, 5%, 94%);

  --ui-button-bg: #66cec4;
  --ui-button-color: #0a1312;
  --ui-button-bg-hover: #5ec2b8;

  --left-sb-bg-color-hover: var(--ls-quaternary-background-color);
  --left-sb-bg-color: var(--ls-primary-background-color);

  --left-sb-txt-color-hover: var(--ls-primary-text-color);
  --left-sb-txt-color: #717171;

  --external-link-color: #ee5020;
  --external-link-color-hover: #93b83d;

  --highlighter: #ffe79a;

  --selection: rgba(190, 235, 245, 0.6);

  --pre-code-bg: 249, 249, 249;
  --pre-code-text: 34, 34, 34;
  --pre-code-bd: var(--ls-border-color);

  --page-ref-bg-hover: rgba(233, 241, 252, 1);

  --caret-color: #ff2f81;

	--mobile-toolbar-border: hsl(359, 8%, 90%, 0.8);

  --box-shadow-sm: rgba(171, 171, 171, 0.1) 0 2px 3px 0;
  --box-shadow-lg: rgba(171, 171, 171, 0.1) 0 4px 12px;
  --drop-shadow-sm: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
}

.cp__sidebar-main-content {
  margin: 0.25rem 0 1.25rem 0;
  max-width: 940px !important;
  padding: 15px 40px;
  width: 80%;
	height: fit-content;
}

.cp__right-sidebar .sidebar-item {
  margin: 1.25rem 1.25rem;
}

.cp__sidebar-main-content,
.cp__right-sidebar .sidebar-item {
  background-color: var(--main-content-bg);
  border: 1px solid var(--ls-border-color);
  box-shadow: var(--box-shadow-lg);
}
.cp__sidebar-main-content[data-is-full-width="true"] {
  max-width: 100vw !important;
}

.cp__right-sidebar-inner .resizer:hover {
  background-color: rgb(var(--golden), 0.5);
}

/* MAIN CONTENT & CP Right Sidebar END */

/* START Journal Header */
.journal-title .title::before,
.is-journals .title::before {
  content: "📅";
  font-size: 0.8em;
  margin-right: 10px;
  vertical-align: text-bottom;
}
/* Journal Header END */

/* START TASKS */

.form-checkbox {
  border-radius: var(--radius-sm);
	opacity: 0.8;
}

.form-checkbox:checked {
  border: none;
}

.priority {
  font-size: 0;
  visibility: hidden;
}

a[priority]::before,
.priority::before {
  background-repeat: no-repeat;
  border: 1px solid var(--transparent);
  border-radius: 100%;
  display: inline-block;
  font-size: 12px;
  height: 16px;
  visibility: visible;
  width: 16px;
}

a[priority]::before {
  /* display: inline-flex ; */
  margin-right: 5px;
  /* margin-top: 5px; */
}

.priority {
  font-weight: bold;
}

a[priority="A"]::before,
.priority[href="#/page/A"]::before {
  background-color: var(--red);
  content: " ";
}

a[priority="B"]::before,
.priority[href="#/page/B"]::before {
  background-color: var(--orange);
  content: " ";
}

a[priority="C"]::before,
.priority[href="#/page/C"]::before {
  background-color: var(--green);
  content: " ";
}

.timestamp,
[data-drawer-name="logbook"] {
  font-style: italic;
}

/* TASKS END*/

/* START External Link */

.external-link::before {
  content: "🌏";
  margin-right: 5px;
}

.external-link {
  border-bottom: 1px dotted var(--external-link-color);
  color: var(--external-link-color);
}

.external-link:hover {
  border-bottom: 1px dotted var(--external-link-color-hover);
  color: var(--external-link-color-hover);
}

/* External Link END */

/* START Bullet & Bullet Container */

.bullet-container {
  height: 20px;
  width: 20px;
}

.block-children-left-border:hover {
  background-color: hsl(var(--tradewind), 1);
	transition: var(--transition);
}

/* Bullet & Bullet Container END */

/* Inline Header Tags Adjustments */

.ls-block :is(h1, h2) {
  border: none;
  margin: 0;
}

.ls-block :is(h1, h2, h3, h4, h5, h6)::after {
  background-size: 16px 16px;
  content: "";
  display: inline-flex;
  height: 16px;
  margin-left: 5px;
  opacity: 0;
  vertical-align: middle;
  width: 16px;
}
/* ... */

